@@ -1,4 +1,11 @@
 
+Изменения в nginx 1.16.1                                          13.08.2019
+
+    *) Безопасность: при использовании HTTP/2 клиент мог вызвать чрезмерное
+       потребление памяти и ресурсов процессора (CVE-2019-9511,
+       CVE-2019-9513, CVE-2019-9516).
+
+
 Изменения в nginx 1.16.0                                          23.04.2019
 
     *) Стабильная ветка 1.16.x.
